test property: change deprecated method to new
GitOrigin-RevId: cbd1aa6c6d52b8f5ba12cdd4739286af4d845071